Archive2/cc/004883af8b6849/output
main.cpp:5:18: error: templates cannot be declared inside of a local class
    struct foo { template<typename T> void bar() {} };
                 ^~~~~~~~~~~~~~~~~~~~
1 error generated.
