Archive2/cc/004883af8b6849/main.cpp
#include <random>

int main()
{
    struct foo { template<typename T> void bar() {} };
}
